--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -656,7 +656,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Missing  Values Analysis\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
